edited various wording

--- a/assign.html
+++ b/assign.html
@@ -52,6 +52,9 @@ input data files in mmCIF format.
         <INPUT id="formid" name="formid" TYPE="hidden" VALUE="ccextract"> 
 	<input type="hidden" id="caller"  name="caller" value="home">
 
+        <label for="identifier">Deposition ID:</label>
+        <input name="identifier" id="identifier" value="" />
+        <strong>OR</strong>
 	<label for="file">File name</label>
           <input class="formInputText" type='file' size='60' name="file"/>
 
